# aadc

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  NEXT_STEPS_PLAN.md  PERF.md  README.md  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
benches/: benchmark.sh  correction.rs
src/: main.rs
tests/: integration.rs
