[package]
name = "aadc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "ASCII Art Diagram Corrector: fixes misaligned right borders in ASCII diagrams"
repository = "https://github.com/Dicklesworthstone/aadc"
keywords = ["ascii", "diagram", "alignment", "cli", "terminal"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
rich_rust = { path = "/dp/rich_rust" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "correction"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols
