[package]
name = "aadc"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "ASCII Art Diagram Corrector: fixes misaligned right borders in ASCII diagrams"
repository = "https://github.com/Dicklesworthstone/aadc"
keywords = ["ascii", "diagram", "alignment", "cli", "terminal"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
dirs = "6.0"
globset = "0.4"
ignore = "0.4"
notify = { version = "6.0", default-features = false, features = ["macos_kqueue"] }
rich_rust = { git = "https://github.com/Dicklesworthstone/rich_rust", rev = "2fa9e002f293ddf2e5dd917b09f0b1371c33a827" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.6"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "correction"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols
